--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       window.url = url
     </script>
     <!-- for PROD build only -->
-    <script lang="javascript" src="./browserified-libs.js"></script>
+    <!-- <script lang="javascript" src="./browserified-libs.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
