⚡️ set web build optimizations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       window.process = process
     </script>
     <!-- for PROD build only -->
-    <!-- <script lang="javascript" src="./browserified-libs.js"></script> -->
+    <script lang="javascript" src="./browserified-libs.js"></script>
   </head>
   <body>
     <div id="root"></div>
